change spelling error

--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -709,13 +709,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 预处理三：移除前面和后面的空白音段"
+    "# 预处理三：音频重采样和降维"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def re_sample(wav, sample_size=4000):\n",
