--- a/LSTM + Attention 模型.ipynb
+++ b/LSTM + Attention 模型.ipynb
@@ -158,7 +158,9 @@
       "Loading 2000/57929.\n",
       "Loading 4000/57929.\n",
       "Loading 6000/57929.\n",
-      "Loading 8000/57929.\n"
+      "Loading 8000/57929.\n",
+      "Loading 10000/57929.\n",
+      "Loading 12000/57929.\n"
      ]
     },
     {
@@ -173,8 +175,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading 10000/57929.\n",
-      "Loading 12000/57929.\n",
       "Loading 14000/57929.\n",
       "Loading 16000/57929.\n",
       "Loading 18000/57929.\n",
@@ -433,28 +433,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 57929 samples, validate on 6798 samples\n",
-      "Epoch 1/15\n",
-      "1175s - loss: 1.3160 - acc: 0.6436 - val_loss: 0.8309 - val_acc: 0.7696\n",
-      "Epoch 2/15\n",
-      "1158s - loss: 0.6884 - acc: 0.8070 - val_loss: 0.6607 - val_acc: 0.8124\n",
-      "Epoch 3/15\n",
-      "1101s - loss: 0.5446 - acc: 0.8456 - val_loss: 0.5936 - val_acc: 0.8342\n",
-      "Epoch 4/15\n",
-      "1086s - loss: 0.4711 - acc: 0.8641 - val_loss: 0.5798 - val_acc: 0.8347\n",
-      "Epoch 5/15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.fit(trainX, trainY, epochs=EPOCHE, batch_size=BATCH_SIZE, verbose=2, validation_data=(valX, valY))"
+    "import keras\n",
+    "\n",
+    "# Early Stopping\n",
+    "early_stop = keras.callbacks.EarlyStopping(monitor='val_loss', min_delta=0, patience=2, verbose=2, mode='auto')\n",
+    "\n",
+    "# Reduce lr\n",
+    "reduce_lr = keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.2,\n",
+    "                              patience=1, min_lr=0.001)\n",
+    "\n",
+    "callbacks = [early_stop, reduce_lr]\n",
+    "\n",
+    "# Train\n",
+    "model_info = model.fit(trainX, trainY, \n",
+    "          epochs=EPOCHE, batch_size=BATCH_SIZE, \n",
+    "          verbose=2, validation_data=(valX, valY),\n",
+    "          callbacks=callbacks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_model_history(model_history):\n",
+    "    fig, axs = plt.subplots(1,2,figsize=(15,5))\n",
+    "    # summarize history for accuracy\n",
+    "    axs[0].plot(range(1,len(model_history.history['acc'])+1),model_history.history['acc'])\n",
+    "    axs[0].plot(range(1,len(model_history.history['val_acc'])+1),model_history.history['val_acc'])\n",
+    "    axs[0].set_title('Model Accuracy')\n",
+    "    axs[0].set_ylabel('Accuracy')\n",
+    "    axs[0].set_xlabel('Epoch')\n",
+    "    axs[0].set_xticks(np.arange(1,len(model_history.history['acc'])+1),len(model_history.history['acc'])/10)\n",
+    "    axs[0].legend(['train', 'val'], loc='best')\n",
+    "    # summarize history for loss\n",
+    "    axs[1].plot(range(1,len(model_history.history['loss'])+1),model_history.history['loss'])\n",
+    "    axs[1].plot(range(1,len(model_history.history['val_loss'])+1),model_history.history['val_loss'])\n",
+    "    axs[1].set_title('Model Loss')\n",
+    "    axs[1].set_ylabel('Loss')\n",
+    "    axs[1].set_xlabel('Epoch')\n",
+    "    axs[1].set_xticks(np.arange(1,len(model_history.history['loss'])+1),len(model_history.history['loss'])/10)\n",
+    "    axs[1].legend(['train', 'val'], loc='best')\n",
+    "    plt.show()\n",
+    "    \n",
+    "plot_model_history(model_info)"
    ]
   },
   {
@@ -466,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -488,14 +519,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting 0/70779\n"
+      "Predicting 0/158538\n",
+      "Predicting 3000/158538\n",
+      "Predicting 6000/158538\n",
+      "Predicting 9000/158538\n",
+      "Predicting 12000/158538\n",
+      "Predicting 15000/158538\n",
+      "Predicting 18000/158538\n",
+      "Predicting 21000/158538\n",
+      "Predicting 24000/158538\n",
+      "Predicting 27000/158538\n",
+      "Predicting 30000/158538\n",
+      "Predicting 33000/158538\n",
+      "Predicting 36000/158538\n",
+      "Predicting 39000/158538\n",
+      "Predicting 42000/158538\n",
+      "Predicting 45000/158538\n",
+      "Predicting 48000/158538\n",
+      "Predicting 51000/158538\n",
+      "Predicting 54000/158538\n",
+      "Predicting 57000/158538\n",
+      "Predicting 60000/158538\n",
+      "Predicting 63000/158538\n",
+      "Predicting 66000/158538\n",
+      "Predicting 69000/158538\n",
+      "Predicting 72000/158538\n",
+      "Predicting 75000/158538\n",
+      "Predicting 78000/158538\n",
+      "Predicting 81000/158538\n",
+      "Predicting 84000/158538\n",
+      "Predicting 87000/158538\n",
+      "Predicting 90000/158538\n",
+      "Predicting 93000/158538\n",
+      "Predicting 96000/158538\n",
+      "Predicting 99000/158538\n",
+      "Predicting 102000/158538\n",
+      "Predicting 105000/158538\n",
+      "Predicting 108000/158538\n",
+      "Predicting 111000/158538\n",
+      "Predicting 114000/158538\n",
+      "Predicting 117000/158538\n",
+      "Predicting 120000/158538\n",
+      "Predicting 123000/158538\n",
+      "Predicting 126000/158538\n",
+      "Predicting 129000/158538\n",
+      "Predicting 132000/158538\n",
+      "Predicting 135000/158538\n",
+      "Predicting 138000/158538\n",
+      "Predicting 141000/158538\n",
+      "Predicting 144000/158538\n",
+      "Predicting 147000/158538\n",
+      "Predicting 150000/158538\n",
+      "Predicting 153000/158538\n",
+      "Predicting 156000/158538\n",
+      "Finish predicting.....\n",
+      "Writing to file.....\n"
      ]
     }
    ],
@@ -522,15 +607,6 @@
     "print(\"Writing to file.....\")\n",
     "submissionDF.to_csv(\"submission-lstm-attention.csv\", index=False, header=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
