--- a/LSTM + Attention 模型.ipynb
+++ b/LSTM + Attention 模型.ipynb
@@ -156,11 +156,7 @@
      "text": [
       "Loading 0/57929.\n",
       "Loading 2000/57929.\n",
-      "Loading 4000/57929.\n",
-      "Loading 6000/57929.\n",
-      "Loading 8000/57929.\n",
-      "Loading 10000/57929.\n",
-      "Loading 12000/57929.\n"
+      "Loading 4000/57929.\n"
      ]
     },
     {
@@ -175,6 +171,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading 6000/57929.\n",
+      "Loading 8000/57929.\n",
+      "Loading 10000/57929.\n",
+      "Loading 12000/57929.\n",
       "Loading 14000/57929.\n",
       "Loading 16000/57929.\n",
       "Loading 18000/57929.\n",
@@ -433,9 +433,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 57929 samples, validate on 6798 samples\n",
+      "Epoch 1/15\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "\n",
@@ -444,7 +453,7 @@
     "\n",
     "# Reduce lr\n",
     "reduce_lr = keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.2,\n",
-    "                              patience=1, min_lr=0.001)\n",
+    "                              patience=1, min_lr=0.0001)\n",
     "\n",
     "callbacks = [early_stop, reduce_lr]\n",
     "\n",
