change max epoche 20

--- a/LSTM + Attention 模型.ipynb
+++ b/LSTM + Attention 模型.ipynb
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -260,12 +260,7 @@
      "output_type": "stream",
      "text": [
       "Loading 0/6798.\n",
-      "Loading 2000/6798.\n",
-      "Loading 4000/6798.\n",
-      "Loading 6000/6798.\n",
-      "Finish loading val data.\n",
-      "Input Shape:  (6798, 99, 13)\n",
-      "Output Shape:  (6798, 32)\n"
+      "Loading 2000/6798.\n"
      ]
     }
    ],
