--- a/LSTM + Attention + Preprocessing.ipynb
+++ b/LSTM + Attention + Preprocessing.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -101,13 +101,15 @@
        "        -3.05185094e-05,  -9.15555283e-05,   1.22074038e-04], dtype=float32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "load_wav_file('./dataset/train/audio/bed/00176480_nohash_0.wav')"
+    "import os\n",
+    "\n",
+    "load_wav_file(os.path.join(os.getcwd(),'dataset','train','audio','bed','00176480_nohash_0.wav'))"
    ]
   },
   {
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -248,13 +250,13 @@
        "'training'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "which_set('./dataset/train/audio/bed/00176480_nohash_0.wav')"
+    "which_set(os.path.join(os.getcwd(),'dataset','train','audio','bed','00176480_nohash_0.wav'))"
    ]
   },
   {
@@ -266,19 +268,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "random_seed = 1234\n",
-    "data_dir = './dataset/'"
+    "data_dir = os.path.join(os.getcwd(),'dataset')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -301,7 +303,7 @@
     "    all_words = {}\n",
     "\n",
     "    # Look through all the subfolders to find audio samples\n",
-    "    search_path = os.path.join(data_dir, 'train/audio/*', '*.wav')\n",
+    "    search_path = os.path.join(data_dir,'train','audio','*','*.wav')\n",
     "\n",
     "    for wav_path in gfile.Glob(search_path):\n",
     "        (_, word) = os.path.split(os.path.dirname(wav_path))\n",
@@ -351,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'label': 'silence', 'file': './dataset/train/audio/right/988e2f9a_nohash_0.wav'}\n"
+      "{'label': 'silence', 'file': '/Users/yufan/Documents/workspace/kaggle-project/dataset/train/audio/right/988e2f9a_nohash_0.wav'}\n"
      ]
     }
    ],
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -501,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -564,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -583,14 +585,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File to be processed: ./dataset/train/audio/right/988e2f9a_nohash_0.wav Label: silence\n",
+      "File to be processed: /Users/yufan/Documents/workspace/kaggle-project/dataset/train/audio/right/988e2f9a_nohash_0.wav Label: silence\n",
       "Before processing: [-0.00064089 -0.00091556 -0.00088504 ..., -0.0004883  -0.00054933\n",
       " -0.00085452]\n",
       "After processing: [-0. -0. -0. ..., -0. -0. -0.]\n"
@@ -616,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -640,18 +642,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File to be processed: ./dataset/train/audio/right/988e2f9a_nohash_0.wav Label: silence\n",
+      "File to be processed: /Users/yufan/Documents/workspace/kaggle-project/dataset/train/audio/right/988e2f9a_nohash_0.wav Label: silence\n",
       "Before processing: [-0.00064089 -0.00091556 -0.00088504 ..., -0.0004883  -0.00054933\n",
       " -0.00085452]\n",
-      "After processing: [ 0.          0.          0.         ...,  0.00039674  0.00094607\n",
-      " -0.00268563]\n"
+      "After processing: [  0.00000000e+00   0.00000000e+00   0.00000000e+00 ...,  -2.44148076e-04\n",
+      "  -6.10370189e-05   3.05185094e-05]\n"
      ]
     }
    ],
@@ -675,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -686,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -726,17 +728,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.00040357, -0.00059277, -0.00050251, ..., -0.00044404,\n",
-       "       -0.00065001, -0.00080031], dtype=float32)"
+       "array([ 0.01448599,  0.01270447,  0.01276574, ..., -0.01399273,\n",
+       "       -0.00956289, -0.01594852], dtype=float32)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -780,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -810,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +821,7 @@
        "(98, 40)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -862,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -895,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -928,35 +930,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "test_itr = 0\n",
-    "test_data_index = data_index['testing']\n",
-    "\n",
-    "def test_generator(batch_size=batch_size):\n",
-    "    \n",
-    "    while 1:\n",
-    "        global test_itr\n",
-    "        if test_itr + batch_size >= len(test_data_index):\n",
-    "            test_itr = 0\n",
-    "\n",
-    "        X_batches = []\n",
-    "        Y_batches = []\n",
-    "\n",
-    "        for i in range(test_itr, test_itr+batch_size):\n",
-    "            fname = test_data_index[i]['file']\n",
-    "            label = test_data_index[i]['label']\n",
-    "            X_input, Y_input = preprocess(fname, label)\n",
-    "            X_batches.append(X_input)\n",
-    "            Y_batches.append(Y_input)\n",
-    "            \n",
-    "        test_itr = test_itr + batch_size\n",
-    "\n",
-    "        yield np.array(X_batches), to_categorical(np.array(Y_batches).reshape(batch_size, 1), num_classes=label_count)"
+    "test_data_index = data_index['testing']"
    ]
   },
   {
@@ -971,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1076,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "  8/695 [..............................] - ETA: 4626s - loss: 2.4760 - acc: 0.1133"
+      " 16/695 [..............................] - ETA: 8914s - loss: 2.4672 - acc: 0.1289"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-38-57b867698fc1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m                     \u001b[0mvalidation_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mval_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                     \u001b[0mvalidation_steps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_data_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m                     epochs=EPOCHE)\n\u001b[0m",
+      "\u001b[0;32m/anaconda/lib/python3.6/site-packages/Keras-2.0.8-py3.6.egg/keras/legacy/interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     85\u001b[0m                 warnings.warn('Update your `' + object_name +\n\u001b[1;32m     86\u001b[0m                               '` call to the Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 87\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_original_function\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/lib/python3.6/site-packages/Keras-2.0.8-py3.6.egg/keras/engine/training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[1;32m   2013\u001b[0m                 \u001b[0mbatch_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2014\u001b[0m                 \u001b[0;32mwhile\u001b[0m \u001b[0msteps_done\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2015\u001b[0;31m                     \u001b[0mgenerator_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_generator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2016\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2017\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator_output\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'__len__'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/lib/python3.6/site-packages/Keras-2.0.8-py3.6.egg/keras/utils/data_utils.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    643\u001b[0m                     \u001b[0;32myield\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    644\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 645\u001b[0;31m                 \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -1176,10 +1170,10 @@
     "    word = possible_labels[np.argmax( predictions[0] )]\n",
     "    if word == label:\n",
     "        correct_count = correct_count + 1\n",
-    "    if i % 10 == 0:\n",
+    "    if i % 100 == 0:\n",
     "        print(\"Step {}/{}\".format(i, len(test_data_index)))\n",
     "        \n",
-    "print('correct: {}/{}'.format(correct_count, len(test_data_index)))"
+    "print('Correct Prediction: {}/{}'.format(correct_count, len(test_data_index)))"
    ]
   },
   {
@@ -1191,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -1200,22 +1194,22 @@
     "import glob    \n",
     "import pandas as pd\n",
     "\n",
-    "test_files = glob.glob(\"./dataset/test/audio/*.wav\")\n",
-    "test_filenames = [f.split(\"/\")[-1] for f in test_files]"
+    "test_files = glob.glob(os.path.join(data_dir,'test','audio','*.wav'))\n",
+    "test_filenames = [os.path.basename(f) for f in test_files]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'./dataset/test/audio/clip_667ea2de0.wav'"
+       "'/Users/yufan/Documents/workspace/kaggle-project/dataset/test/audio/clip_667ea2de0.wav'"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,15 +1280,6 @@
     "print(\"Writing to file.....\")\n",
     "submissionDF.to_csv(\"submission-lstm-attention-prepropcessing.csv\", index=False, header=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
