fix the bug tf lib not found

--- a/LSTM + Attention + Preprocessing.ipynb
+++ b/LSTM + Attention + Preprocessing.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,10 +60,6 @@
    ],
    "source": [
     "import tensorflow as tf\n",
-    "\n",
-    "from tensorflow.contrib.framework.python.ops import audio_ops as contrib_audio\n",
-    "from tensorflow.python.ops import io_ops\n",
-    "from tensorflow.python.platform import gfile\n",
     "\n",
     "from scipy.io import wavfile\n",
     "import numpy as np\n",
@@ -91,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +97,7 @@
        "        -3.05185094e-05,  -9.15555283e-05,   1.22074038e-04], dtype=float32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -188,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -241,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +246,7 @@
        "'training'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -280,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -288,6 +284,7 @@
    "source": [
     "import random\n",
     "import math\n",
+    "import glob\n",
     "\n",
     "def prepare_data_index():\n",
     "\n",
@@ -305,7 +302,7 @@
     "    # Look through all the subfolders to find audio samples\n",
     "    search_path = os.path.join(data_dir,'train','audio','*','*.wav')\n",
     "\n",
-    "    for wav_path in gfile.Glob(search_path):\n",
+    "    for wav_path in glob.glob(search_path):\n",
     "        (_, word) = os.path.split(os.path.dirname(wav_path))\n",
     "        word = word.lower()\n",
     "        if word == '_background_noise_':\n",
@@ -353,25 +350,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'label': 'silence', 'file': '/Users/yufan/Documents/workspace/kaggle-project/dataset/train/audio/right/988e2f9a_nohash_0.wav'}\n"
+      "{'label': 'silence', 'file': '/Users/yufan/Documents/workspace/kaggle-project/dataset/train/audio/right/988e2f9a_nohash_0.wav'}\n",
+      "{'label': 'right', 'file': '/Users/yufan/Documents/workspace/kaggle-project/dataset/train/audio/right/68dd409e_nohash_0.wav'}\n",
+      "{'label': 'right', 'file': '/Users/yufan/Documents/workspace/kaggle-project/dataset/train/audio/right/ab7b5acd_nohash_1.wav'}\n"
      ]
     }
    ],
    "source": [
     "data_index, word_to_index = prepare_data_index()\n",
-    "print(data_index['training'][0])"
+    "print(data_index['training'][0])\n",
+    "print(data_index['testing'][0])\n",
+    "print(data_index['validation'][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -452,58 +453,37 @@
    "source": [
     "def prepare_background_data():\n",
     "\n",
-    "    \"\"\"Searches a folder for background noise audio, and loads it into memory.\n",
-    "\n",
-    "    It's expected that the background audio samples will be in a subdirectory\n",
-    "    named '_background_noise_' inside the 'data_dir' folder, as .wavs that match\n",
-    "    the sample rate of the training data, but can be much longer in duration.\n",
-    "    If the '_background_noise_' folder doesn't exist at all, this isn't an\n",
-    "    error, it's just taken to mean that no background noise augmentation should\n",
-    "    be used. If the folder does exist, but it's empty, that's treated as an\n",
-    "    error.\n",
-    "\n",
-    "    Returns:\n",
-    "        List of raw PCM-encoded audio samples of background noise.\n",
-    "    Raises:\n",
-    "      Exception: If files aren't found in the folder.\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
     "    background_data = []\n",
-    "    background_dir = './dataset/train/audio/_background_noise_/'\n",
-    "    if not os.path.exists(background_dir):\n",
-    "        return background_data\n",
-    "    with tf.Session(graph=tf.Graph()) as sess:\n",
-    "        wav_filename_placeholder = tf.placeholder(tf.string, [])\n",
-    "        wav_loader = io_ops.read_file(wav_filename_placeholder)\n",
-    "        wav_decoder = contrib_audio.decode_wav(wav_loader,\n",
-    "                desired_channels=1)\n",
-    "        search_path = os.path.join(background_dir, '*.wav')\n",
-    "        for wav_path in gfile.Glob(search_path):\n",
-    "            wav_data = sess.run(wav_decoder,\n",
-    "                                feed_dict={wav_filename_placeholder: wav_path}).audio.flatten()\n",
-    "            background_data.append(wav_data)\n",
-    "        if not background_data:\n",
-    "            raise Exception('No background wav files were found in '\n",
-    "                             + search_path)\n",
+    "    background_wavfiles = glob.glob(os.path.join(data_dir,'train','audio','_background_noise_','*.wav'))\n",
+    "\n",
+    "    for wavfile in background_wavfiles:\n",
+    "        wav = load_wav_file(wavfile)\n",
+    "        background_data.append(wav)\n",
     "    \n",
     "    return background_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/lib/python3.6/site-packages/scipy/io/wavfile.py:273: WavFileWarning: Chunk (non-data) not understood, skipping it.\n",
+      "  WavFileWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "background_data = prepare_background_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -566,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -585,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -642,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -652,8 +632,8 @@
       "File to be processed: /Users/yufan/Documents/workspace/kaggle-project/dataset/train/audio/right/988e2f9a_nohash_0.wav Label: silence\n",
       "Before processing: [-0.00064089 -0.00091556 -0.00088504 ..., -0.0004883  -0.00054933\n",
       " -0.00085452]\n",
-      "After processing: [  0.00000000e+00   0.00000000e+00   0.00000000e+00 ...,  -2.44148076e-04\n",
-      "  -6.10370189e-05   3.05185094e-05]\n"
+      "After processing: [-0.00064089 -0.00091556 -0.00088504 ..., -0.0004883  -0.00054933\n",
+      " -0.00085452]\n"
      ]
     }
    ],
@@ -677,18 +657,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/lib/python3.6/site-packages/scipy/io/wavfile.py:273: WavFileWarning: Chunk (non-data) not understood, skipping it.\n",
+      "  WavFileWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "background_data = prepare_background_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -728,17 +715,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.01448599,  0.01270447,  0.01276574, ..., -0.01399273,\n",
-       "       -0.00956289, -0.01594852], dtype=float32)"
+       "array([-0.00092582, -0.00070003, -0.00087347, ..., -0.00083046,\n",
+       "       -0.00052985, -0.0005568 ], dtype=float32)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -782,12 +769,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "from tensorflow.contrib.framework.python.ops import audio_ops as contrib_audio\n",
+    "\n",
     "def mfcc(wav, \n",
     "         window_size_samples=window_size_samples,\n",
     "         window_stride_samples=window_stride_samples,):\n",
@@ -812,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +810,7 @@
        "(98, 40)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -864,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -897,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -930,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -951,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1076,21 +1065,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      " 16/695 [..............................] - ETA: 8914s - loss: 2.4672 - acc: 0.1289"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-57b867698fc1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m                     \u001b[0mvalidation_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mval_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                     \u001b[0mvalidation_steps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_data_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m                     epochs=EPOCHE)\n\u001b[0m",
-      "\u001b[0;32m/anaconda/lib/python3.6/site-packages/Keras-2.0.8-py3.6.egg/keras/legacy/interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     85\u001b[0m                 warnings.warn('Update your `' + object_name +\n\u001b[1;32m     86\u001b[0m                               '` call to the Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 87\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_original_function\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda/lib/python3.6/site-packages/Keras-2.0.8-py3.6.egg/keras/engine/training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[1;32m   2013\u001b[0m                 \u001b[0mbatch_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2014\u001b[0m                 \u001b[0;32mwhile\u001b[0m \u001b[0msteps_done\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2015\u001b[0;31m                     \u001b[0mgenerator_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_generator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2016\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2017\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator_output\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'__len__'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda/lib/python3.6/site-packages/Keras-2.0.8-py3.6.egg/keras/utils/data_utils.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    643\u001b[0m                     \u001b[0;32myield\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    644\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 645\u001b[0;31m                 \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "  7/695 [..............................] - ETA: 4095s - loss: 2.4815 - acc: 0.0625"
      ]
     }
    ],
