change some params

--- a/LSTM + Attention + Preprocessing.ipynb
+++ b/LSTM + Attention + Preprocessing.ipynb
@@ -144,7 +144,7 @@
     "background_frequency = 0.1\n",
     "\n",
     "################### Wav Shifting #########################\n",
-    "time_shift = int(desired_samples/10)\n",
+    "time_shift = int(desired_samples/8)\n",
     "\n",
     "############### MFCC Processing Params ###################\n",
     "# Duration of frequency analysis window.\n",
@@ -834,7 +834,7 @@
     "        wav = silence_as_zero(wav, label)\n",
     "        wav = shift_and_pad_zeros(wav)\n",
     "    wav = mix_background_noise(wav)\n",
-    "    return mfcc(wav,numcep = 26), word_to_index[label]"
+    "    return mfcc(wav,numcep=dct_coefficient_count), word_to_index[label]"
    ]
   },
   {
