--- a/使用notebook示例.ipynb
+++ b/使用notebook示例.ipynb
@@ -16,7 +16,7 @@
     }
    ],
    "source": [
-    "from speech_recognizer.process import basecnn_gen_process"
+    "from speech_recognizer.process import "
    ]
   },
   {
